--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
+    "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
